styles.css
/*Setup */

:root{
  --Red-400: hsl(0, 100%, 68%);
  --Blue-950: hsl(230, 29%, 20%);
  --Blue-100: hsl(207, 33%, 95%);
  --Font-BC: "Barlow Condensed";
  --Font-BC-weight-400: 400;
  --Font-BC-weight-700: 700;
  --Font-B: Barlow;
  --Font-B-weight: 400;
  --transition: 0.5s ease-in;
}

*,
*:before,
*:after{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: none;
}

html{
  font-size: 18px;
}

/*Mobile Design*/

body{
  display: flex;
  flex-direction: column;
  width: 100vw;
  align-items: center;
  justify-content: center;
  background-color: white;
  position: relative;
}

body::before{
  content: "";
  background-color: var(--Blue-100);
  position: absolute;
  z-index: -5;
  top: 0;
  right: 0;
  width: 55%;
  height: 57%;
  border-bottom-left-radius: 3rem;
}

main{
  width: 80%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.header{
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 3rem;
  position: relative;
}

.close-button, .links-container{
  display: none;
}

.links-container{
  flex-direction: column;
  position: absolute;
  align-items: center;
  background-color: white;
  width: 100%;
  top: 3rem;
  z-index: 1;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  gap: 0.7rem;
  border-radius: 0.3rem;
  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05), 0 2px 4px -1px rgba(0,0,0,0.03);
}

.links-container a{
  text-decoration: none;
  color: var(--Blue-950);
  font-family: var(--Font-BC);
  font-weight: var(--Font-BC-weight-700);
  text-transform: uppercase;
  font-size: 1.07rem;
}

.links-container hr{
  border: grey solid 1px;
  width: 85%;
}

.links-container .login-link{
  color: grey;
}

.logo{
  width: 10.7%;
}

.menu-button, .close-button{
  background-color: transparent;
  width: 10%;
}

.menu-button img, .close-button img{
  width: 100%;
}

.main{
  display: flex;
  flex-direction: column;
  width: 100%;
}

.image-container{
  width: 100%;
  margin-top: 3rem;
  overflow: hidden;
}

.image-container img{
  width: 24.6rem;
  display: block;
  margin-left: -1.2rem;
}

.main-text{
  display: flex;
  flex-direction: column;
  margin-top: 3rem;
}

.text-one strong{
  color: white;
  background-color: var(--Blue-950);
  font-family: var(--Font-BC);
  font-weight: var(--Font-BC-weight-700);
  text-transform: uppercase;
  padding: 0.3rem 0.8rem;
  border-radius: 1rem;
  margin-right: 0.3rem;
}

.text-one{
  text-transform: uppercase;
  width: 100%;
  font-size: 1rem;
  font-family: var(--Font-B);
  font-weight: var(--Font-B-weight);
  color: grey
}

.main-text h1{
  color: var(--Blue-950);
  font-family: var(--Font-BC);
  font-weight: var(--Font-BC-weight-700);
  text-transform: uppercase;
  margin-top: 1rem;
}

.text-two{
  font-family: var(--Font-B);
  font-weight: var(--Font-B);
  color: var(--Blue-95000);
  margin-top: 1rem;
  width: 90%;
}

.main-text div{
  margin-top: 1rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.main-text div button{
  background-color: var(--Red-400);
  color: white;
  font-family: var(--Font-BC);
  font-weight: var(--Font-BC-weight-700);
  text-transform: uppercase;
  padding: 0.7rem 1rem;
  font-size: 0.8rem;
  border-radius: 0.3rem;
  width: 50%;
}

.main-text div p{
  text-transform: uppercase;
  font-size: 0.7rem;
  font-family: var(--Font-B);
  font-weight: var(--Font-B-weight);
  color: grey;
}

/*Desktop design*/

@media screen and (min-width: 768px){
  
  body{
    width: 100%;
  }

  main{
    width: 100%;
    padding-left: 10%;
  }

  body::before{
    width: 50%;
    height: 60%;
  }

  .menu-button, .close-button{
    margin: 0;
    padding: 0;
    display: none;
  }

  .header{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    margin: 0;
    margin-top: 3rem;
    padding-right: 10%
  }

  .logo{
    width: 3%;
  }

  .links-container{
    display: flex;
    flex-direction: row;
    gap: 0.5rem;
    position: static;
    box-shadow: none;
    margin: 0;
    padding: 0;
    width: fit-content;
    background-color: transparent;
  }

  .links-container a{
    transition: var(--transition);
  }

  .links-container a:hover{
    text-decoration: underline;
  }

  .links-container .login-link:hover{
    text-decoration: none;
  }

  .links-container hr{
    width: 0.3rem;
    height: 0.3rem;
    border-radius: 50%;
    background-color: gray;
    border: none;
  }

  .main{
    flex-direction: row-reverse;
    width: 100%;
    padding: 0;
    margin: 0;
    gap: 0rem;
    margin-top: 5rem;
  }

  .text-one{
    font-size: 1rem;
  }

  .text-one strong{
    padding: 0.1rem 0.5rem;
  }

  .main-text{
    margin: 0;
    margin-top: 1.3rem;
    padding: 0;
    width: 66%;
    height: 100%;
    padding-bottom: 5rem;
  }

  .main-text h1{
    font-size: 3rem;
    padding: 0;
    margin: 0;
    margin-top: 1rem;
  }

  .text-two{
    font-size: 1rem;
    width: 60%;
  }

  .main-text div{
    padding: 0;
    margin: 0;
    margin-top: 3rem;
    gap: 1rem;
  }

  .main-text div button{
    padding: 0.7rem 0.7rem;
    font-size: 1rem;
    transition: var(--transition);
  }

  .main-text div button:hover{
    opacity: 0.5;
    cursor: pointer;
  }

  .main-text div p{
    padding: 0;
    margin: 0;
    font-size: 1rem;
    letter-spacing: 0.15rem;
    width: 100%;
  }

  .image-container{
    margin: 0;
    padding: 0;
    display: block;
    height: 100%;
    width: 100%;
  }

  .image-container img{
    width: 130%;
    transform: translateX(10%)
  }
}

